fixed the overflow issue

--- a/src/sass/base/reset.scss
+++ b/src/sass/base/reset.scss
@@ -9,6 +9,7 @@
 body {
   box-sizing: border-box;
   height: 100vh;
+  background-color: var(--bg-color);
 }
 
 #root {
